feat: improve dev workflow and operator portal UX
- Add concurrently to run Vite + Vercel dev servers simultaneously
- Update package.json dev script to auto-start both servers
- Remove 'Try Demo' button from /operator page (external link)
- Simplify operator portal navigation to focus on self-service flow

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "SuperPaymaster Registry - Operational interface for PaymasterV4 management",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"pnpm:dev:vite\" \"pnpm:dev:vercel\" --names \"vite,vercel\" --prefix-colors \"cyan,magenta\"",
+    "dev:vite": "vite",
+    "dev:vercel": "vercel dev --listen 3000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -24,6 +26,7 @@
     "@types/react-dom": "^19.1.9",
     "@vercel/node": "^5.3.26",
     "@vitejs/plugin-react": "^5.0.4",
+    "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
